# openF1-sdk

./: .gitignore  README.md  SDK_MIGRATION_PROMPT.md  main.py  requirements.txt
angular-frontend/: package-lock.json
angular-frontend/src/: styles.scss
angular-frontend/src/app/: app.html  app.routes.ts  app.scss  app.spec.ts
angular-frontend/src/app/core/: openf1-api.service.ts  openf1.models.ts
angular-frontend/src/app/views/history-view/: history-view.html  history-view.scss  history-view.ts
angular-frontend/src/app/views/live-view/: live-view.html  live-view.scss  live-view.ts
config/: openf1.authexampel.ini
f1-sdk/: README.md  pyproject.toml
f1-sdk/f1_sdk/: __init__.py
f1-sdk/f1_sdk/Models/: __init__.py  carData.py  drivers.py  f1BaseModel.py  intervals.py  laps.py  location.py  meetings.py  overtakes.py  pit.py  position.py  raceControl.py  session.py  sessionResult.py  startingGrid.py  stints.py  teamRadio.py  wather.py  weather.py
f1-sdk/f1_sdk/client/: __init__.py  auth.py  errors.py  http.py  live.py  querry.py  query.py  sdk.py
f1-sdk/f1_sdk/resources/: __init__.py  base.py  car_data.py  catalog.py  driver.py  interval.py  lap.py  location.py  meeting.py  overtake.py  pit.py  position.py  race_control.py  session.py  session_result.py  starting_grid.py  stint.py  team_radio.py  weather.py
f1_sdk/: __init__.py  __init__.pyi
web/: app.js  index.html
