[project]
name = "openf1sdk"
version = "0.0.1"
description = "Comunity Python SDK for the OpenF1 REST API (only free tier supported)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["client*", "Models*", "resources*", "f1_sdk*"]
